--- a/index.html
+++ b/index.html
@@ -25,51 +25,51 @@
         }
         .a1{
             grid-area: area1;
-            background-color: aliceblue;
-            background-image: url(/images/car4.webp);
+            /* background-color: aliceblue; */
+            background-image: url(./images/car4.webp);
             background-size: cover;
             background-position: center;
             
         }
         .a2{
             grid-area: area2;
-            background-color: aquamarine;
-            background-image: url(/images/mustang.webp);
+            /* background-color: aquamarine; */
+            background-image: url(./images/mustang.webp);
             background-size: cover;
             background-position: center;
         }
         .a3{
             grid-area: area3;
-            background-color: bisque;
-            background-image: url(/images/rolls\ royce.jpg);
+            /* background-color: bisque; */
+            background-image: url(./images/rolls\ royce.jpg);
             background-size: contain;
             
         }
         .b1{
             grid-area: area4;
-            background-color: beige;
-            background-image: url(/images/car1.webp);
+            /* background-color: beige; */
+            background-image: url(./images/car1.webp);
             background-size: cover;
             background-position: center;
         }
         .b2{
             grid-area: area5;
-            background-color: bisque;
-            background-image: url(/images/car5.webp);
+            /* background-color: bisque; */
+            background-image: url(./images/car5.webp);
             background-size: cover;
             background-position: center;
         }
         .b3{
             grid-area: area6;
-            background-color: burlywood;
-            background-image: url(/images/car2.webp);
+            /* background-color: burlywood; */
+            background-image: url(./images/car2.webp);
             background-size: cover;
             background-position: center;
         }
         .b4{
             grid-area: area7;
-            background-color: blanchedalmond;
-            background-image: url(/images/car3.webp);
+            /* background-color: blanchedalmond; */
+            background-image: url(./images/car3.webp);
             background-size: cover;
             background-position: center;
         }
